music-player using vanillaJS

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="img-container">
             <img src="img/jazz-1.jpg" alt="Album Art">
         </div>
-        <h2 id="title">Electric Chill Machine</h2>
-        <h3 id="artist">Jacinto</h3>
+        <h2 id="title">Chill Bro</h2>
+        <h3 id="artist">MixKit Music</h3>
         <audio src="https://assets.mixkit.co/music/preview/mixkit-chill-bro-494.mp3"></audio>
         <!-- Progress -->
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
             <div class="duration-wrapper">
                 <span id="current-time">0:00</span>
-                <span id="duration">2:06</span>
+                <span id="duration">1:39</span>
             </div>
         </div>
         <!-- Controls -->
